@@ -54,7 +54,7 @@ Enumerations</h1></center>
 <a href="#PaintMethod">PaintMethod</a></li>
 
 <li>
-<a href="#QuantumType">QuantumType</a></li>
+<a href="#QuantumTypes">QuantumTypes</a></li>
 
 <li>
 <a href="#RenderingIntent">RenderingIntent</a></li>
@@ -985,11 +985,11 @@ matching border color.</td>
 <br>&nbsp;
 <table BORDER=0 WIDTH="100%" >
 <tr>
-<td ALIGN=LEFT BGCOLOR="#52799E"><img SRC="right_triangle.png" ALT=">" BORDER=0 height=14 width=15><a NAME="QuantumType"></a><b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size=+1>QuantumType</font></font></font></b></td>
+<td ALIGN=LEFT BGCOLOR="#52799E"><img SRC="right_triangle.png" ALT=">" BORDER=0 height=14 width=15><a NAME="QuantumTypes"></a><b><font face="Helvetica, Arial"><font color="#FFFFFF"><font size=+1>QuantumTypes</font></font></font></b></td>
 </tr>
 </table>
 
-<p><i>QuantumType</i> is used to indicate the source or destination format
+<p><i>QuantumTypes</i> is used to indicate the source or destination format
 of entire pixels, or components of pixels ("Quantums") while they are being
 read, or written to, a pixel cache. The validity of these format specifications
 depends on whether the Image pixels are in RGB format, RGBA format, or
