@@ -1,3 +1,9 @@
+2000-06-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Magick++/Include.h : Changed enumeration FilterType to
+ 	FilterTypes, and QuantumTypes to QuantumType in order to match
+ 	last-minute API change in ImageMagick.
+
 2000-06-22  Bob Friesenhahn <bfriesen@simple.dallas.tx.us>
 
         * lib/Magick++/Pixels.cpp (indexes): Bugfix, use GetCacheViewIndexes()
